use correct wb_intercon.conf file
old wb_intercon.conf version was added by mistake.

Usage:

  $ cd Hardware/src/wb_intercon/sw
  $ ./wb_intercon_gen ../wb_intercon.conf ../wb_intercon.v

Signed-off-by: Antony Pavlov <antonynpavlov@gmail.com>

--- a/Hardware/src/wb_intercon/wb_intercon.conf
+++ b/Hardware/src/wb_intercon/wb_intercon.conf
@@ -1,17 +1,16 @@
-; or1k instruction bus master
-[master or1k_i]
+; mips32r1 instruction bus master
+[master mips32r1_i]
 slaves =
  rom0_ibus
 
-; or1k data bus master
-[master dbus]
+; mips32r1 data bus master
+[master mips32r1_d]
 slaves =
  rom0_dbus
  uart0
 
 [slave uart0]
-datawidth=8
-offset=0x19000000
+offset=0x1f000900
 size=32
 
 [slave rom0_ibus]
