--- a/Hardware/src/wb_intercon/wb_intercon.conf
+++ b/Hardware/src/wb_intercon/wb_intercon.conf
@@ -1,22 +1,18 @@
 ; mips32r1 instruction bus master
 [master mips32r1_i]
 slaves =
- rom0_ibus
+ rom0
 
 ; mips32r1 data bus master
 [master mips32r1_d]
 slaves =
- rom0_dbus
+ rom0
  uart0
 
 [slave uart0]
 offset=0x1f000900
 size=32
 
-[slave rom0_ibus]
-offset=0x1fc00000
-size=2048
-
-[slave rom0_dbus]
+[slave rom0]
 offset=0x1fc00000
 size=2048
